fix: icons size when sidebar is collapsed

--- a/src/pages/Admin/components/Sidebar/Sidebar.css
+++ b/src/pages/Admin/components/Sidebar/Sidebar.css
@@ -36,8 +36,7 @@
 }
 
 .sidebar.collapsed {
-    width: 75px;
-
+    width: 80px;
     h2 {
        display: none;
     }
@@ -48,18 +47,19 @@
 }
 
 .sidebar-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
 .sidebar-menu-item {
-    margin-bottom: 10px;
 
     .sidebar-link {
         display: flex;
         align-items: center;
-        padding: 10px;
         border-radius: var(--border-radius);
         transition: background-color 0.3s;
     }
@@ -68,7 +68,6 @@
 .sidebar-link {
     text-decoration: none;
     color: var(--link-color);
-    margin-bottom: 10px;
     transition: color 0.3s;
 
     &:hover {
